--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase-tools": "^15.5.1",
     "lucide-react": "^0.563.0",
     "moment": "^2.30.1",
     "radix-ui": "^1.4.3",
