--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.9.0",
     "firebase-tools": "^15.5.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "moment": "^2.30.1",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.13.0",
     "shadcn": "^3.8.4",
     "tailwind-merge": "^3.4.0",
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
