--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ VITE_FIREBASE_STORAGE_BUCKET="carpetcompanyin.firebasestorage.app"
 VITE_FIREBASE_MESSAGING_SENDER_ID="990282526585"
 VITE_FIREBASE_APP_ID="1:990282526585:web:9ccc0462e07cb14dec49a8"
 VITE_FIREBASE_MEASUREMENT_ID="G-47C6WVTDZY"
+
+VITE_RAZORPAY_KEY_ID="rzp_test_SGIa9hOmY1z9iV"
+VITE_RAZORPAY_KEY_SECRET="qmoUsjaqQNhu3S2dSbl2D4TJ"
